Fix pixel art imports

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/scenes/World.tscn")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,9 +30,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://assets/scenes/World.tscn")
 current_scene="res://assets/scenes/World.tscn"
 center_split_offset=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=12
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
